--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,15 +5,29 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-modal": "^3.16.1",
+    "react-redux": "^8.1.3",
+    "react-router": "^6.20.0",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
+    "react-star-ratings": "^2.3.0",
+    "react-table": "^7.8.0",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2",
+    "styled-components": "^6.1.1",
+    "swiper": "^11.0.5",
+    "truncate": "^3.0.0",
     "universal-cookie": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
