--- a/backend/package.json
+++ b/backend/package.json
@@ -17,12 +17,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "mongoose": "^8.0.1",
     "mongoose-unique-validator": "^4.0.0",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "paypal-rest-sdk": "^1.8.1",
+    "pdfkit": "^0.14.0"
   }
 }
