--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-calendar": "^4.7.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
@@ -22,6 +24,7 @@
     "react-scripts": "5.0.1",
     "react-star-ratings": "^2.3.0",
     "react-table": "^7.8.0",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
